src/objects/LeanData__Log__c/fields/LeanData__Post_Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Post_Queue_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Post Queue Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>