src/objects/LeanData__Log__c/fields/LeanData__Round_Robin_Pool__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Round_Robin_Pool__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Round Robin Pool</label>
    <referenceTo>LeanData__Round_Robin_Pool__c</referenceTo>
    <relationshipLabel>PostOwnerLogs</relationshipLabel>
    <relationshipName>PostOwnerLogs</relationshipName>
    <type>Lookup</type>
</CustomField>