src/objects/LeanData__Log__c/fields/LeanData__Routing_Deployment__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Routing_Deployment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Routing Deployment</label>
    <referenceTo>LeanData__Routing_Deployment__c</referenceTo>
    <relationshipLabel>Logs</relationshipLabel>
    <relationshipName>Logs</relationshipName>
    <type>Lookup</type>
</CustomField>